--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,10 @@
 }
 
 body {
-  display: flex;
   place-items: center;
-  min-height: 100vh;
 }
 
 #root {
+  display: grid;
   min-height: 100vh;
 }
