--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -11,8 +11,15 @@
   font-size: 1rem;
 }
 
+.btn-dark:hover {
+  color: rgba(0, 0, 0, 0.5) !important;
+}
+
 @media screen and (min-width: 768px) {
 
+  main {
+    align-self: flex-start;
+  }
   .hero-img {
     width: 88%;
     object-fit: contain;
